# lw-bignum

./: .gitignore  CMakeLists.txt  README.md  number_arr.cpp
include/: bignum.hpp  bignum_converter.hpp  bignum_defs.hpp
src/: CMakeLists.txt  bignum.cpp
test/: CMakeLists.txt  bignum_converter_tests.cpp  bignum_tests.cpp
